--- a/classes/_local_main_.userdata.html
+++ b/classes/_local_main_.userdata.html
@@ -103,7 +103,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L131">main.d.ts:131</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L132">main.d.ts:132</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -129,7 +129,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L129">main.d.ts:129</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L130">main.d.ts:130</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -152,7 +152,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L135">main.d.ts:135</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L136">main.d.ts:136</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -175,7 +175,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L133">main.d.ts:133</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L134">main.d.ts:134</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -295,6 +295,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisehelper" class="tsd-kind-icon">Child<wbr>Process<wbr>Message<wbr>Promise<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#configvariables" class="tsd-kind-icon">Config<wbr>Variables</a>
