--- a/enums/_local_main_.jobstatus.html
+++ b/enums/_local_main_.jobstatus.html
@@ -98,7 +98,7 @@
 					<div class="tsd-signature tsd-kind-icon">CREATED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;created&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L594">main.d.ts:594</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L595">main.d.ts:595</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -108,7 +108,7 @@
 					<div class="tsd-signature tsd-kind-icon">FAILED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;failed&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L597">main.d.ts:597</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L598">main.d.ts:598</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -118,7 +118,7 @@
 					<div class="tsd-signature tsd-kind-icon">RUNNING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;running&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L595">main.d.ts:595</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L596">main.d.ts:596</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -128,7 +128,7 @@
 					<div class="tsd-signature tsd-kind-icon">SUCCESSFUL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;successful&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L596">main.d.ts:596</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L597">main.d.ts:597</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -236,6 +236,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisehelper" class="tsd-kind-icon">Child<wbr>Process<wbr>Message<wbr>Promise<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#configvariables" class="tsd-kind-icon">Config<wbr>Variables</a>
