--- a/interfaces/_local_main_.servicebin.html
+++ b/interfaces/_local_main_.servicebin.html
@@ -97,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">size<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L235">main.d.ts:235</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L236">main.d.ts:236</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L242">main.d.ts:242</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L243">main.d.ts:243</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -235,6 +235,9 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisehelper" class="tsd-kind-icon">Child<wbr>Process<wbr>Message<wbr>Promise<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#configvariables" class="tsd-kind-icon">Config<wbr>Variables</a>
