--- a/classes/_local_main_.processgroup.html
+++ b/classes/_local_main_.processgroup.html
@@ -122,7 +122,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L628">main.d.ts:628</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L629">main.d.ts:629</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -144,7 +144,7 @@
 					<div class="tsd-signature tsd-kind-icon">processes<span class="tsd-signature-symbol">:</span> <a href="_local_main_.process.html" class="tsd-signature-type">Process</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L628">main.d.ts:628</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L629">main.d.ts:629</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -161,7 +161,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L638">main.d.ts:638</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L639">main.d.ts:639</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -184,7 +184,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L636">main.d.ts:636</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L637">main.d.ts:637</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -201,7 +201,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L632">main.d.ts:632</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L633">main.d.ts:633</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -218,7 +218,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L634">main.d.ts:634</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L635">main.d.ts:635</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -335,6 +335,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisehelper" class="tsd-kind-icon">Child<wbr>Process<wbr>Message<wbr>Promise<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#configvariables" class="tsd-kind-icon">Config<wbr>Variables</a>
