--- a/enums/_local_main_.lightningserviceplatform.html
+++ b/enums/_local_main_.lightningserviceplatform.html
@@ -91,7 +91,7 @@
 					<div class="tsd-signature tsd-kind-icon">Darwin<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;darwin&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L246">main.d.ts:246</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L247">main.d.ts:247</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -101,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">Linux<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;linux&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L249">main.d.ts:249</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L250">main.d.ts:250</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -111,7 +111,7 @@
 					<div class="tsd-signature tsd-kind-icon">Win32<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;win32&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L247">main.d.ts:247</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L248">main.d.ts:248</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -121,7 +121,7 @@
 					<div class="tsd-signature tsd-kind-icon">Win32x64<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;win64&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L248">main.d.ts:248</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L249">main.d.ts:249</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -229,6 +229,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisehelper" class="tsd-kind-icon">Child<wbr>Process<wbr>Message<wbr>Promise<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#configvariables" class="tsd-kind-icon">Config<wbr>Variables</a>
