--- a/interfaces/_local_main_.iimportsitesettings.html
+++ b/interfaces/_local_main_.iimportsitesettings.html
@@ -119,7 +119,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#blueprint">blueprint</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L47">index.d.ts:47</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L47">index.d.ts:47</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -130,7 +130,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#database">database</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L45">index.d.ts:45</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L45">index.d.ts:45</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -141,7 +141,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#environment">environment</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L46">index.d.ts:46</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L46">index.d.ts:46</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -151,7 +151,7 @@
 					<div class="tsd-signature tsd-kind-icon">import<wbr>Data<span class="tsd-signature-symbol">:</span> <a href="_local_main_.iimportdata.html" class="tsd-signature-type">IImportData</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L727">main.d.ts:727</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L728">main.d.ts:728</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -162,7 +162,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#multisite">multiSite</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L43">index.d.ts:43</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L43">index.d.ts:43</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -173,7 +173,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#phpversion">phpVersion</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L44">index.d.ts:44</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L44">index.d.ts:44</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -184,7 +184,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#sitedomain">siteDomain</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L42">index.d.ts:42</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L42">index.d.ts:42</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -195,7 +195,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#sitename">siteName</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L40">index.d.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L40">index.d.ts:40</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -206,7 +206,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#sitepath">sitePath</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L41">index.d.ts:41</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L41">index.d.ts:41</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -217,7 +217,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="_local_.newsiteinfo.html#webserver">webServer</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L48">index.d.ts:48</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/index.d.ts#L48">index.d.ts:48</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -227,7 +227,7 @@
 					<div class="tsd-signature tsd-kind-icon">zip<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L728">main.d.ts:728</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L729">main.d.ts:729</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -356,6 +356,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisehelper" class="tsd-kind-icon">Child<wbr>Process<wbr>Message<wbr>Promise<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#configvariables" class="tsd-kind-icon">Config<wbr>Variables</a>
