--- a/interfaces/_local_main_.registeredservice.html
+++ b/interfaces/_local_main_.registeredservice.html
@@ -113,7 +113,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="_local_main_.selectablesiteservice.html#binversion">binVersion</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L164">main.d.ts:164</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L165">main.d.ts:165</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -134,7 +134,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="_local_main_.selectablesiteservice.html#label">label</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L149">main.d.ts:149</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L150">main.d.ts:150</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -155,7 +155,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="_local_main_.selectablesiteservice.html#name">name</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L143">main.d.ts:143</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L144">main.d.ts:144</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -175,7 +175,7 @@
 					<div class="tsd-signature tsd-kind-icon">registered<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">true</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L173">main.d.ts:173</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L174">main.d.ts:174</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -186,7 +186,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="_local_main_.selectablesiteservice.html#version">version</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L157">main.d.ts:157</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/3ef56ba/main.d.ts#L158">main.d.ts:158</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -308,6 +308,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisehelper" class="tsd-kind-icon">Child<wbr>Process<wbr>Message<wbr>Promise<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#configvariables" class="tsd-kind-icon">Config<wbr>Variables</a>
